--- a/src/run.sh.jinja2
+++ b/src/run.sh.jinja2
@@ -5,8 +5,8 @@
 # Instead of typing "make TARGET", type "./run.sh make TARGET".
 # This will run the make workflow within a docker container.
 #
-# The assumption is that you are working in the src/ontology folder;
-# we therefore map the whole repo (../..) to a docker volume.
+# The SDGIO repo doesn't yet use the src/ontology folder;
+# so we map to .
 #
 # See README-editors.md for more details.
-docker run -v $PWD/../../:/work -w /work/src/ontology {% if project.robot_java_args is defined %}-e ROBOT_JAVA_ARGS='{{ project.robot_java_args }}' {% endif %}--rm -ti obolibrary/odkfull "$@"
+docker run -v $PWD/../:/work -w /work/src/ {% if project.robot_java_args is defined %}-e ROBOT_JAVA_ARGS='{{ project.robot_java_args }}' {% endif %}--rm -ti obolibrary/odkfull "$@"
