--- a/.travis.yml.jinja2
+++ b/.travis.yml.jinja2
@@ -19,6 +19,7 @@ branches:
   only:
     - master
     - test-travis
+    - odk-alignment
 
 ### Add your own lists here
 ### See https://github.com/INCATools/ontology-development-kit/issues/35
